--- a/app/src/main/res/layout/fragment_create_phrase.xml
+++ b/app/src/main/res/layout/fragment_create_phrase.xml
@@ -70,7 +70,7 @@
             android:id="@+id/textView6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="60dp"
             android:paddingHorizontal="50dp"
             android:textAlignment="center"
             android:textColor="#000"
@@ -85,44 +85,249 @@
             app:layout_constraintTop_toBottomOf="@+id/textView6" android:id="@+id/frameLayout">
 
     </FrameLayout>
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
+    <TableLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout" android:id="@+id/linearLayout">
-        <TextView
-                android:text="@string/your_languages"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:id="@+id/textView7"/>
-        <Spinner
-                android:layout_width="@dimen/spinner_width"
-                android:layout_height="wrap_content"
-                style="@style/SpinnerTheme"
-                android:id="@+id/spinner"/>
-    </LinearLayout>
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="20dp">
-        <TextView
-                android:text="@string/your_phrase"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent">
+            <LinearLayout
+                    android:layout_marginRight="@dimen/word_margin_right"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="1"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_marginRight="@dimen/word_margin_right"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="2"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_marginRight="@dimen/word_margin_right"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="3"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_marginRight="@dimen/word_margin_right"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="4"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="5"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+        </TableRow>
+        <TableRow
+                android:layout_marginTop="10dp"
+                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#000"/>
-        <Spinner
-                android:layout_width="@dimen/spinner_width"
-                style="@style/SpinnerTheme"
-                android:layout_height="wrap_content"/>
-    </LinearLayout>
+                android:layout_height="match_parent">
+            <LinearLayout
+                    android:layout_marginRight="@dimen/word_margin_right"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="6"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_marginRight="@dimen/word_margin_right"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="7"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_marginRight="@dimen/word_margin_right"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="8"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_marginRight="@dimen/word_margin_right"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="9"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_marginRight="@dimen/word_margin_right"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="10"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_marginRight="@dimen/word_margin_right"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="11"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:textAlignment="center"
+                        android:text="creek"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="5dp"
+                        android:textAlignment="center"
+                        android:text="12"
+                        android:textColor="#000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+        </TableRow>
+    </TableLayout>
+
 
 </android.support.constraint.ConstraintLayout>
