--- a/app/src/main/res/layout/fragment_restore.xml
+++ b/app/src/main/res/layout/fragment_restore.xml
@@ -6,30 +6,25 @@
         android:layout_height="match_parent"
         android:background="@drawable/background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".Screens.AuthenticationScreen.CreateNewFragment">
+        tools:context=".Screens.AuthenticationScreen.RestoreFragment">
 
-    <LinearLayout
-            android:orientation="vertical"
+    <Button
+            android:text="@string/strButton_Next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingVertical="@dimen/button_padding_vertical"
+            android:paddingHorizontal="28dp"
+            android:textAllCaps="false"
+            android:textColor="@color/colorTanHide"
+            android:background="@drawable/main_button"
+            android:drawableLeft="@drawable/ic_next"
+            android:textSize="@dimen/button_text_size"
+            android:id="@+id/btnNewWalletAuthen"
+            app:layout_constraintBottom_toTopOf="@+id/textView3"
+            android:layout_marginBottom="@dimen/create_new_button_margin_bottom"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="80dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView3">
-        <Button
-                android:text="@string/strButton_CreateNew"
-                android:layout_width="@dimen/button_width"
-                android:layout_height="wrap_content"
-                android:paddingVertical="@dimen/button_padding_vertical"
-                android:paddingHorizontal="28dp"
-                android:textAllCaps="false"
-                android:layout_marginBottom="10dp"
-                android:textColor="@color/colorTanHide"
-                android:background="@drawable/main_button"
-                android:drawableLeft="@drawable/ic_createnew"
-                android:textSize="@dimen/button_text_size"
-                android:id="@+id/btnNewWalletAuthen"/>
-    </LinearLayout>
+            android:layout_marginRight="20dp"/>
+
     <TextView
             android:text="@string/app_name"
             android:layout_width="wrap_content"
@@ -52,21 +47,44 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+            android:text="@string/tuto_signin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="80dp"
+            android:paddingHorizontal="50dp"
+            android:textAlignment="center"
+            android:textColor="#000"
+            app:layout_constraintTop_toBottomOf="@+id/textView"/>
+    <FrameLayout
+            android:layout_width="@dimen/tutoline_width"
+            android:layout_height="@dimen/tutoline_height"
+            android:layout_marginTop="@dimen/tutoline_margin_top"
+            android:background="#000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" android:id="@+id/frameLayout">
+
+    </FrameLayout>
+
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="190dp"
             android:layout_marginHorizontal="40dp"
             app:layout_constraintTop_toBottomOf="@+id/textView">
         <TextView
                 android:text="@string/user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_user"
                 android:textSize="@dimen/tite_text_size"
+                android:drawableLeft="@drawable/ic_user"
                 android:textColor="#000"
                 android:id="@+id/textView2"/>
         <EditText
@@ -89,25 +107,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberPassword"
+                android:maxLength="6"
                 android:layout_marginLeft="25dp"
                 android:ems="10"
                 android:id="@+id/editText2"/>
-        <TextView
-                android:text="@string/pin_reenter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:drawableLeft="@drawable/ic_pin"
-                android:textSize="@dimen/tite_text_size"
-                android:textColor="#000"
-                android:id="@+id/textView5"/>
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberPassword"
-                android:layout_marginLeft="25dp"
-                android:ems="10"
-                android:id="@+id/editText3"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
