--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,11 @@
     <dimen name="spinner_width">130dp</dimen>
     <dimen name="create_new_button_margin_bottom">60dp</dimen>
 
+    //Input Phrase Screen
+    <dimen name="phrase_input_width">80dp</dimen>
+    <dimen name="phrase_input_margin_top">10dp</dimen>
+
+    //Create Phrase Screen
+    <dimen name="word_margin_right">12dp</dimen>
+
 </resources>
