--- a/app/src/main/res/drawable-v24/ic_pin.xml
+++ b/app/src/main/res/drawable-v24/ic_pin.xml
@@ -3,8 +3,8 @@
 
     <item
             android:drawable="@drawable/pin"
-            android:width="@dimen/ic_size"
-            android:height="25dp"
+            android:width="15dp"
+            android:height="20dp"
             android:right="10dp"
     />
 
