--- a/app/src/main/res/layout/fragment_authentication.xml
+++ b/app/src/main/res/layout/fragment_authentication.xml
@@ -1,76 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background"
-        tools:context=".Screens.AuthenticationScreen.AuthenticationFragment">
-    <ImageView
-            android:src="@drawable/logo"
-            android:layout_width="@dimen/logo_width"
-            android:layout_height="@dimen/logo_heigh"
-            android:id="@+id/imageView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/logo_margin_top"
-            app:layout_constraintTop_toBottomOf="@+id/textView"/>
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="80dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView3">
-        <Button
-                android:text="@string/strButton_CreateNew"
-                android:layout_width="@dimen/button_width"
+        tools:context=".screens.authenticationScreen.AuthenticationFragment">
+
+    <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
+               android:src="@mipmap/test_background" android:scaleType="fitXY"/>
+
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingVertical="@dimen/button_padding_vertical"
-                android:paddingHorizontal="28dp"
-                android:textAllCaps="false"
-                android:textColor="@color/colorTanHide"
-                android:background="@drawable/main_button"
-                android:drawableLeft="@drawable/ic_createnew"
-                android:textSize="@dimen/button_text_size"
-                android:id="@+id/btnNewWalletAuthen"/>
-        <Button
-                android:text="@string/strButton_Restore"
-                android:layout_width="@dimen/button_width"
-                android:textAllCaps="false"
-                android:paddingVertical="@dimen/button_padding_vertical"
-                android:textSize="@dimen/button_text_size"
-                android:layout_marginTop="10dp"
-                android:paddingHorizontal="42dp"
-                android:drawableLeft="@drawable/ic_restorewallet"
-                android:textColor="@color/colorTanHide"
-                android:background="@drawable/main_button"
-                android:layout_marginBottom="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginBottom="50dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView3">
+            <Button
+                    android:text="@string/strButton_CreateNew"
+                    android:layout_width="@dimen/button_width"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="28dp"
+                    android:elevation="100dp"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorWhite"
+                    android:background="@drawable/main_button"
+                    android:textSize="@dimen/button_text_size"
+                    android:id="@+id/btnNewWalletAuthen"/>
+            <Button
+                    android:text="@string/strButton_Restore"
+                    android:layout_width="@dimen/button_width"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/button_text_size"
+                    android:layout_marginTop="10dp"
+                    android:paddingHorizontal="42dp"
+                    android:textColor="@color/colorWhite"
+                    android:background="@drawable/main_button"
+                    android:layout_marginBottom="10dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnRestoreWalletAuthen"/>
+        </LinearLayout>
+        <TextView
+                android:text="@string/copyright"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/btnRestoreWalletAuthen"/>
-    </LinearLayout>
-    <TextView
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:textSize="@dimen/app_name_size"
-            android:textColor="@color/colorCasal"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/app_name_margin_top"
-            app:layout_constraintTop_toTopOf="parent"/>
-    <TextView
-            android:text="@string/copyright"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorCasal"
-            android:id="@+id/textView3"
-            android:layout_marginBottom="@dimen/copyright_margin_bottom"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-</android.support.constraint.ConstraintLayout>
+                android:textColor="@color/colorWhite"
+                android:id="@+id/textView3"
+                android:textSize="@dimen/copyright_text_size"
+                android:layout_marginBottom="@dimen/copyright_margin_bottom"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+        <ImageView
+                android:src="@mipmap/logo"
+                android:layout_width="@dimen/logo_splash_width"
+                android:layout_height="@dimen/logo_splash_heigh"
+                android:id="@+id/imageView2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="120dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+    </android.support.constraint.ConstraintLayout>
+</FrameLayout>
