--- a/app/src/main/res/layout/fragment_create_new.xml
+++ b/app/src/main/res/layout/fragment_create_new.xml
@@ -4,9 +4,9 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background"
+        android:background="@mipmap/test_background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".Screens.AuthenticationScreen.CreateNewFragment">
+        tools:context=".screens.authenticationScreen.CreateNewFragment">
 
     <LinearLayout
             android:orientation="vertical"
@@ -14,40 +14,27 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="80dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView3">
+            android:layout_marginTop="25dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
         <Button
                 android:text="@string/strButton_CreateNew"
                 android:layout_width="@dimen/button_width"
-                android:layout_height="wrap_content"
-                android:paddingVertical="@dimen/button_padding_vertical"
+                android:layout_height="match_parent"
                 android:paddingHorizontal="28dp"
                 android:textAllCaps="false"
                 android:layout_marginBottom="10dp"
-                android:textColor="@color/colorTanHide"
+                android:textColor="@color/colorWhite"
                 android:background="@drawable/main_button"
-                android:drawableLeft="@drawable/ic_createnew"
                 android:textSize="@dimen/button_text_size"
                 android:id="@+id/btnNewWalletAuthen"/>
     </LinearLayout>
     <TextView
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:textSize="@dimen/app_name_size"
-            android:textColor="@color/colorCasal"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/app_name_margin_top"
-            app:layout_constraintTop_toTopOf="parent"/>
-    <TextView
             android:text="@string/copyright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorCasal"
+            android:textColor="@color/colorWhite"
             android:id="@+id/textView3"
+            android:textSize="@dimen/copyright_text_size"
             android:layout_marginBottom="@dimen/copyright_margin_bottom"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,56 +45,138 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="120dp"
-            android:layout_marginHorizontal="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView">
-        <TextView
-                android:text="@string/user_name"
+            android:layout_marginHorizontal="32dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout">
+        <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_user"
-                android:textSize="@dimen/tite_text_size"
-                android:textColor="#000"
-                android:id="@+id/textView2"/>
-        <EditText
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="@dimen/cardView_margin_bottom"
+                card_view:cardBackgroundColor="@android:color/transparent"
+                card_view:cardElevation="4dp"
+                card_view:cardCornerRadius="10dp">
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="20dp"
+                    android:background="@drawable/bubble_background">
+                <TextView
+                        android:text="@string/user_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/text_size"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorWhite"
+                        android:id="@+id/textView2"/>
+                <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPersonName"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/text_size"
+                        android:background="@android:color/transparent"
+                        android:ems="10"
+                        android:id="@+id/editText"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:layout_marginLeft="25dp"
-                android:ems="10"
-                android:id="@+id/editText"/>
-        <TextView
-                android:text="@string/pin"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="@dimen/cardView_margin_bottom"
+                card_view:cardBackgroundColor="@android:color/transparent"
+                card_view:cardElevation="4dp"
+                card_view:cardCornerRadius="10dp">
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="20dp"
+                    android:background="@drawable/bubble_background">
+                <TextView
+                        android:text="@string/pin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/text_size"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorWhite"
+                        android:id="@+id/textView4"/>
+                <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberPassword"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/text_size"
+                        android:background="@android:color/transparent"
+                        android:ems="10"
+                        android:id="@+id/editText2"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:drawableLeft="@drawable/ic_pin"
-                android:textSize="@dimen/tite_text_size"
-                android:textColor="#000"
-                android:id="@+id/textView4"/>
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberPassword"
-                android:layout_marginLeft="25dp"
-                android:ems="10"
-                android:id="@+id/editText2"/>
-        <TextView
-                android:text="@string/pin_reenter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:drawableLeft="@drawable/ic_pin"
-                android:textSize="@dimen/tite_text_size"
-                android:textColor="#000"
-                android:id="@+id/textView5"/>
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberPassword"
-                android:layout_marginLeft="25dp"
-                android:ems="10"
-                android:id="@+id/editText3"/>
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="@dimen/cardView_margin_bottom"
+                card_view:cardBackgroundColor="@android:color/transparent"
+                card_view:cardElevation="4dp"
+                card_view:cardCornerRadius="10dp">
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="20dp"
+                    android:background="@drawable/bubble_background">
+                <TextView
+                        android:text="@string/pin_reenter"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/text_size"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorWhite"
+                        android:id="@+id/textView5"/>
+                <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberPassword"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/text_size"
+                        android:background="@android:color/transparent"
+                        android:ems="10"
+                        android:id="@+id/editText3"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
+    <ImageView
+            android:src="@mipmap/logo"
+            android:layout_width="@dimen/logo_width"
+            android:layout_height="@dimen/logo_heigh"
+            android:id="@+id/imageView4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="60dp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
 
 </android.support.constraint.ConstraintLayout>
