--- a/app/src/main/res/layout/fragment_restore.xml
+++ b/app/src/main/res/layout/fragment_restore.xml
@@ -4,20 +4,18 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background"
+        android:background="@mipmap/background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".Screens.AuthenticationScreen.RestoreFragment">
+        tools:context=".screens.authenticationScreen.RestoreFragment">
 
     <Button
             android:text="@string/strButton_Next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/button_padding_vertical"
             android:paddingHorizontal="28dp"
             android:textAllCaps="false"
-            android:textColor="@color/colorTanHide"
+            android:textColor="@color/colorWhite"
             android:background="@drawable/main_button"
-            android:drawableLeft="@drawable/ic_next"
             android:textSize="@dimen/button_text_size"
             android:id="@+id/btnNewWalletAuthen"
             app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -83,7 +81,7 @@
                 android:text="@string/user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/tite_text_size"
+                android:textSize="@dimen/text_size"
                 android:drawableLeft="@drawable/ic_user"
                 android:textColor="#000"
                 android:id="@+id/textView2"/>
@@ -100,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:drawableLeft="@drawable/ic_pin"
-                android:textSize="@dimen/tite_text_size"
+                android:textSize="@dimen/text_size"
                 android:textColor="#000"
                 android:id="@+id/textView4"/>
         <EditText
