--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="copyright_margin_bottom">16dp</dimen>
+    <dimen name="copyright_margin_bottom">5dp</dimen>
+    <dimen name="copyright_text_size">10dp</dimen>
 
     <dimen name="app_name_size">30dp</dimen>
     <dimen name="app_name_margin_top">30dp</dimen>
 
-    <dimen name="logo_width">240dp</dimen>
-    <dimen name="logo_heigh">150dp</dimen>
+    <dimen name="logo_splash_width">238dp</dimen>
+    <dimen name="logo_splash_heigh">98dp</dimen>
     <dimen name="logo_margin_top">80dp</dimen>
+
+
+    <dimen name="logo_width">179dp</dimen>
+    <dimen name="logo_heigh">74dp</dimen>
 
     <dimen name="tutoline_width">40dp</dimen>
     <dimen name="tutoline_height">1dp</dimen>
@@ -21,9 +26,9 @@
     <dimen name="ic_size">20dp</dimen>
 
     //Create New Screen
-    <dimen name="tite_text_size">18dp</dimen>
-    <dimen name="spinner_width">130dp</dimen>
+    <dimen name="text_size">15dp</dimen>
     <dimen name="create_new_button_margin_bottom">60dp</dimen>
+    <dimen name="cardView_margin_bottom">13dp</dimen>
 
     //Input Phrase Screen
     <dimen name="phrase_input_width">80dp</dimen>
@@ -31,5 +36,10 @@
 
     //Create Phrase Screen
     <dimen name="word_margin_right">12dp</dimen>
+    <dimen name="table_row_margin_bottom">20dp</dimen>
+
+    //Confirm Phrase Screen
+    <dimen name="button_word_margin_right">15dp</dimen>
+    <dimen name="table_row_margin_bottom_confirm">30dp</dimen>
 
 </resources>
