implement SignUp + SignIn api

--- a/app/src/main/res/layout/item_confirm_phrase_layout.xml
+++ b/app/src/main/res/layout/item_confirm_phrase_layout.xml
@@ -13,6 +13,8 @@
             android:textAlignment="center"
             android:text="creek"
             android:textColor="@color/colorWhite"
+            android:paddingHorizontal="5dp"
+            android:paddingVertical="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
