--- a/app/src/main/res/layout/fragment_register_user_info.xml
+++ b/app/src/main/res/layout/fragment_register_user_info.xml
@@ -7,7 +7,7 @@
         android:paddingHorizontal="@dimen/layout_padding_Horizontal"
         android:background="@mipmap/test_background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".screens.authenticationScreen.CreateNewFragment">
+        tools:context=".screens.authenticationScreen.RegisterUserInfoFragment">
 
     <LinearLayout
             android:orientation="vertical"
@@ -15,10 +15,11 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="25dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:layout_constraintStart_toStartOf="parent">
         <Button
-                android:text="@string/strButton_Next"
-                android:layout_width="wrap_content"
+                android:text="@string/strButton_CreateNew"
+                android:layout_width="@dimen/button_width"
                 android:layout_height="match_parent"
                 android:paddingHorizontal="28dp"
                 android:textAllCaps="false"
@@ -26,7 +27,7 @@
                 android:textColor="@color/colorWhite"
                 android:background="@drawable/main_button"
                 android:textSize="@dimen/button_text_size"
-                android:id="@+id/btnNextCreate"/>
+                android:id="@+id/btnCreateNewCreate"/>
     </LinearLayout>
     <TextView
             android:text="@string/copyright"
@@ -66,7 +67,7 @@
                     android:paddingHorizontal="20dp"
                     android:background="@drawable/bubble_background">
                 <TextView
-                        android:text="@string/user_name"
+                        android:text="@string/first_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/text_size"
@@ -82,7 +83,7 @@
                         android:textSize="@dimen/text_size"
                         android:background="@android:color/transparent"
                         android:ems="10"
-                        android:id="@+id/etUserNameCreate"/>
+                        android:id="@+id/etFirstNameCreate"/>
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
@@ -106,63 +107,22 @@
                     android:paddingHorizontal="20dp"
                     android:background="@drawable/bubble_background">
                 <TextView
-                        android:text="@string/pin"
+                        android:text="@string/last_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/text_size"
                         android:textStyle="bold"
-                        android:textColor="@color/colorWhite"
-                        android:id="@+id/textView4"/>
+                        android:textColor="@color/colorWhite"/>
                 <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textPassword"
+                        android:inputType="textPersonName"
                         android:layout_marginTop="5dp"
                         android:textColor="@color/colorWhite"
                         android:textSize="@dimen/text_size"
                         android:background="@android:color/transparent"
                         android:ems="10"
-                        android:id="@+id/etPasswordCreate"/>
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginBottom="@dimen/cardView_margin_bottom"
-                card_view:cardBackgroundColor="@android:color/transparent"
-                card_view:cardElevation="4dp"
-                card_view:cardCornerRadius="10dp">
-
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingVertical="10dp"
-                    android:paddingHorizontal="20dp"
-                    android:background="@drawable/bubble_background">
-                <TextView
-                        android:text="@string/pin_reenter"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorWhite"
-                        android:id="@+id/textView5"/>
-                <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPassword"
-                        android:layout_marginTop="5dp"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="@dimen/text_size"
-                        android:background="@android:color/transparent"
-                        android:ems="10"
-                        android:id="@+id/etConfirmPasswordCreate"/>
+                        android:id="@+id/etLastNameCreate"/>
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
