--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,4 +44,7 @@
     <dimen name="button_word_margin_right">15dp</dimen>
     <dimen name="table_row_margin_bottom_confirm">20dp</dimen>
 
+    //Print Phrase Screen
+    <dimen name="qr_code_size_print">130dp</dimen>
+
 </resources>
