--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,109 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="@dimen/layout_padding_Horizontal"
-        android:background="@mipmap/test_background"
-        tools:context=".MainActivity"
->
+        android:id="@+id/drawer_layout"
+        tools:context=".MainActivity">
 
-    <TextView
-            android:text="@string/copyright"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:id="@+id/textView3"
-            android:textSize="@dimen/copyright_text_size"
-            android:layout_marginBottom="@dimen/copyright_margin_bottom"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-    <ImageView
-            android:src="@mipmap/logo"
-            android:layout_width="@dimen/logo_width"
-            android:layout_height="@dimen/logo_heigh"
-            android:id="@+id/imageView3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/logo_margin_top"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-
-    <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            card_view:cardElevation="4dp"
-            card_view:cardCornerRadius="10dp"
-            card_view:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="20dp"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/cardView"
-            card_view:cardBackgroundColor="@android:color/transparent"
-            tools:layout_editor_absoluteX="40dp">
+            android:layout_height="match_parent"
+            android:paddingHorizontal="@dimen/layout_padding_Horizontal"
+            android:background="@mipmap/test_background">
 
-
+        <TextView
+                android:text="@string/copyright"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorWhite"
+                android:id="@+id/textView3"
+                android:textSize="@dimen/copyright_text_size"
+                android:layout_marginBottom="@dimen/copyright_margin_bottom"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
         <android.support.constraint.ConstraintLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingVertical="25dp"
-                android:paddingHorizontal="20dp"
-                android:background="@drawable/bubble_background">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="-10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="@dimen/logo_margin_top"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
-
-            <TextView
-                    android:text="@string/your_address"
+            <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView6"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:textAlignment="center"
-                    android:textColor="@color/colorWhite"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/text_title_size"
-                    card_view:layout_constraintTop_toTopOf="parent"/>
-            <TextView
-                    android:text="address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tvAddressMain"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:textAlignment="center"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="15dp"
-                    android:ellipsize="end"
-                    android:layout_marginTop="8dp"
-                    card_view:layout_constraintTop_toBottomOf="@+id/textView6"/>
+                    app:srcCompat="@drawable/ic_menu"
+                    android:id="@+id/btnMenuMain"
+                    android:padding="10dp"
+                    android:background="@android:color/transparent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
 
             <ImageView
-                    android:layout_width="@dimen/qr_code_size_main"
-                    android:layout_height="@dimen/qr_code_size_main"
-                    tools:src="@drawable/chart"
-                    android:id="@+id/ivQrCodeMain"
-                    android:scaleType="center"
-                    android:layout_marginTop="40dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:src="@mipmap/logo"
+                    android:layout_width="@dimen/logo_width"
+                    android:layout_height="@dimen/logo_heigh"
+                    android:id="@+id/imageView3"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvAddressMain"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
 
         </android.support.constraint.ConstraintLayout>
 
-    </android.support.v7.widget.CardView>
-    <Button
-            android:text="Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button"
-            android:layout_marginTop="25dp"
-            app:layout_constraintTop_toBottomOf="@+id/cardView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+        <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                card_view:cardElevation="4dp"
+                card_view:cardCornerRadius="10dp"
+                card_view:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="20dp"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/cardView"
+                card_view:cardBackgroundColor="@android:color/transparent"
+                tools:layout_editor_absoluteX="40dp">
 
-</android.support.constraint.ConstraintLayout>
+
+            <android.support.constraint.ConstraintLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="25dp"
+                    android:paddingHorizontal="20dp"
+                    android:background="@drawable/bubble_background">
+
+
+                <TextView
+                        android:text="@string/your_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView6"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorWhite"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/text_title_size"
+                        card_view:layout_constraintTop_toTopOf="parent"/>
+                <TextView
+                        android:text="address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tvAddressMain"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="15dp"
+                        android:ellipsize="end"
+                        android:layout_marginTop="8dp"
+                        card_view:layout_constraintTop_toBottomOf="@+id/textView6"/>
+
+                <ImageView
+                        android:layout_width="@dimen/qr_code_size_main"
+                        android:layout_height="@dimen/qr_code_size_main"
+                        tools:src="@drawable/chart"
+                        android:id="@+id/ivQrCodeMain"
+                        android:scaleType="center"
+                        android:layout_marginTop="40dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tvAddressMain"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
+
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.v7.widget.CardView>
+        <Button
+                android:text="Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button"
+                android:layout_marginTop="25dp"
+                app:layout_constraintTop_toBottomOf="@+id/cardView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.design.widget.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true">
+
+        <include layout="@layout/layout_drawer_menu"/>
+
+    </android.support.design.widget.NavigationView>
+</android.support.v4.widget.DrawerLayout>
