add Unlink wallet + change passPhrase

--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -53,6 +53,7 @@
     </LinearLayout>
 
     <Button
+            android:id="@+id/btnUnlinkWalletMain"
             android:text="Unlink Your Wallet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
