--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,7 +127,7 @@
                 android:text="Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/button"
+                android:id="@+id/btnScanMain"
                 android:layout_marginTop="25dp"
                 app:layout_constraintTop_toBottomOf="@+id/cardView"
                 app:layout_constraintEnd_toEndOf="parent"
