--- a/app/src/main/res/layout/fragment_restore.xml
+++ b/app/src/main/res/layout/fragment_restore.xml
@@ -4,111 +4,138 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/background"
+        android:paddingHorizontal="@dimen/layout_padding_Horizontal"
+        android:background="@mipmap/test_background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".screens.authenticationScreen.RestoreFragment">
 
-    <Button
-            android:text="@string/strButton_Next"
+    <LinearLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="28dp"
-            android:textAllCaps="false"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/main_button"
-            android:textSize="@dimen/button_text_size"
-            android:id="@+id/btnNewWalletAuthen"
-            app:layout_constraintBottom_toTopOf="@+id/textView3"
-            android:layout_marginBottom="@dimen/create_new_button_margin_bottom"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="20dp"/>
-
-    <TextView
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:textSize="@dimen/app_name_size"
-            android:textColor="@color/colorCasal"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/app_name_margin_top"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginTop="25dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        <Button
+                android:text="@string/strButton_Next"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingHorizontal="28dp"
+                android:textAllCaps="false"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/colorWhite"
+                android:background="@drawable/main_button"
+                android:textSize="@dimen/button_text_size"
+                android:id="@+id/btnNextRestore"/>
+    </LinearLayout>
     <TextView
             android:text="@string/copyright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorCasal"
+            android:textColor="@color/colorWhite"
             android:id="@+id/textView3"
+            android:textSize="@dimen/copyright_text_size"
             android:layout_marginBottom="@dimen/copyright_margin_bottom"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
-    <TextView
-            android:text="@string/tuto_signin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView6"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="80dp"
-            android:paddingHorizontal="50dp"
-            android:textAlignment="center"
-            android:textColor="#000"
-            app:layout_constraintTop_toBottomOf="@+id/textView"/>
-    <FrameLayout
-            android:layout_width="@dimen/tutoline_width"
-            android:layout_height="@dimen/tutoline_height"
-            android:layout_marginTop="@dimen/tutoline_margin_top"
-            android:background="#000"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" android:id="@+id/frameLayout">
-
-    </FrameLayout>
-
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="190dp"
-            android:layout_marginHorizontal="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView">
-        <TextView
-                android:text="@string/user_name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout">
+        <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/text_size"
-                android:drawableLeft="@drawable/ic_user"
-                android:textColor="#000"
-                android:id="@+id/textView2"/>
-        <EditText
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="@dimen/cardView_margin_bottom"
+                card_view:cardBackgroundColor="@android:color/transparent"
+                card_view:cardElevation="4dp"
+                card_view:cardCornerRadius="10dp">
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="20dp"
+                    android:background="@drawable/bubble_background">
+                <TextView
+                        android:text="@string/user_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/text_size"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorWhite"
+                        android:id="@+id/textView2"/>
+                <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPersonName"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/text_size"
+                        android:background="@android:color/transparent"
+                        android:ems="10"
+                        android:id="@+id/etUserNameRestore"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:layout_marginLeft="25dp"
-                android:ems="10"
-                android:id="@+id/editText"/>
-        <TextView
-                android:text="@string/pin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:drawableLeft="@drawable/ic_pin"
-                android:textSize="@dimen/text_size"
-                android:textColor="#000"
-                android:id="@+id/textView4"/>
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberPassword"
-                android:maxLength="6"
-                android:layout_marginLeft="25dp"
-                android:ems="10"
-                android:id="@+id/editText2"/>
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="@dimen/cardView_margin_bottom"
+                card_view:cardBackgroundColor="@android:color/transparent"
+                card_view:cardElevation="4dp"
+                card_view:cardCornerRadius="10dp">
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="20dp"
+                    android:background="@drawable/bubble_background">
+                <TextView
+                        android:text="@string/pin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/text_size"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorWhite"
+                        android:id="@+id/textView4"/>
+                <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/text_size"
+                        android:background="@android:color/transparent"
+                        android:ems="10"
+                        android:id="@+id/etPasswordRestore"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
+    <ImageView
+            android:src="@mipmap/logo"
+            android:layout_width="@dimen/logo_width"
+            android:layout_height="@dimen/logo_heigh"
+            android:id="@+id/imageView4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="60dp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
 
 </android.support.constraint.ConstraintLayout>
