--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -124,11 +124,15 @@
 
         </android.support.v7.widget.CardView>
         <Button
-                android:text="Button"
+                android:text="Check"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnScanMain"
                 android:layout_marginTop="25dp"
+                android:background="@drawable/circle_button"
+                android:textColor="@color/colorWhite"
+                android:textAllCaps="false"
+                android:textSize="@dimen/button_text_size"
                 app:layout_constraintTop_toBottomOf="@+id/cardView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
