--- a/app/src/main/res/layout/layout_loading_dialog.xml
+++ b/app/src/main/res/layout/layout_loading_dialog.xml
@@ -3,13 +3,18 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
+              android:background="@drawable/progress_background"
               android:padding="20dp">
     <ProgressBar
+            android:indeterminate="true"
+            android:indeterminateTintMode="src_atop"
+            android:indeterminateTint="@android:color/white"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
     <TextView
+            android:textColor="@android:color/white"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
