--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="colorShadow">#40000000</color>
     <color name="colorMain">#AB2126</color>
     <color name="colorBubble">#99000000</color>
+    <color name="colorGreen">#65C87A</color>
 
 
 </resources>
